--- a/css/styless.css
+++ b/css/styless.css
@@ -10,7 +10,7 @@
 a {background-color:  #c9c9c9;
     }
 .h{background-color:  #c9c9c9;
-    font-size:1.4em
+    font-size:1.4em;
  
 }
 
@@ -53,7 +53,7 @@ a {background-color:  #c9c9c9;
     background-color:  #c9c9c9;    
 }
 #Ostfrielandhaus {
-    font-size: 0.8em
+    font-size: 0.8em;
 }
 #body {
     
