--- a/styless.css
+++ b/styless.css
@@ -48,7 +48,7 @@ img{
     background-color: rgba( 255, 255, 255, 0.206 );
     border-radius: 4px;
     margin-left: 5%;
-    margin-right: 5%
+    margin-right: 5%;
     
     
     
