--- a/styless.css
+++ b/styless.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 900px) {
 *{
     font-family: sans-serif;
 }
@@ -36,7 +37,7 @@ img{
     background-color: rgba( 255, 122, 144, 0.289 );
     float: left;
     margin-left: 2%;
-    width: 96%;
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -68,6 +69,7 @@ img{
         
     }   
         
+
     
 #Inhalt {
     
@@ -104,12 +106,48 @@ h1{
 }
 inhalt p{
     clear: both;
-     text-indent: 20;
+    text-indent: 20;} }
     
+@media screen and (min-device-width : 120px) 
+and (max-device-width : 480px)  {
+   
     
+    *{   font-family: cursive;
+         padding: 0px;
+    }   
     
+.menu{ width: 110%;
+        height: 15%;
+        margin-left: -50;
+        margin-top: -10;
+        flex-wrap: wrap;
+         
+    }
+    
+.Menubox {
+        width: 400px;
+        height: 40%;
+        font-size: 2em;
+        font-weight: 600;
+    }
+    
+#Inhalt {
+        font-size: 1.5em;
+        width: 100%;
+        margin-right: -1%;
+        
+    }
+#Bild {
+        margin-left: -10px;
+        max-width: 100%;
+        max-height: 100%;
+        
+       height: 35%;
+        width: 90%;
+        }
 }
-
+    
+    
 
 
 
