--- a/styless.css
+++ b/styless.css
@@ -112,7 +112,7 @@ inhalt p{
 and (max-device-width : 480px)  {
    
     
-    *{   font-family: serif;
+    *{   font-family:Bahnschrift Light;
          padding: 0px;
     }   
     
