--- a/styless.css
+++ b/styless.css
@@ -1,29 +1,25 @@
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 380px){
 *{
     font-family: sans-serif;
 }
 
-img{
+.Bild img{
     width: 100%;
-   height: 100%;
+   height: auto;
    
-    
-    position:absolute;
-    z-index: -1;
-    
-    
-    margin-left: -9px;
-    margin-top: -9px;
-        
-
+                  
 }
+.bild{
+   box-sizing:border-box; 
+    
+    }    
 
 #box {
     margin-left: auto;
     margin-right: auto;
     
     width: 960px;
-    max-width:96%;
+    max-width:80%;
     height: auto;
     
     
@@ -94,20 +90,17 @@ img{
    
      
 }
-#bild{
-    height:400px ;
-    max-height: 40%;
-    max-width: 50%
+    
+h2{font-size: 1.2em    }
+    
+
 }
-img {
-    height: auto;
-    width: auto;
-   
+
     
   
  
     
-}
+
 
 h1{
     
@@ -115,7 +108,8 @@ h1{
 }
 inhalt p{
     clear: both;
-    text-indent: 20;} 
+    text-indent: 20;
+} 
 
 a:hover {
         color:#e37a68;
@@ -123,30 +117,32 @@ a:hover {
         
     }    
     
-}
+
     
-@media screen and (min-device-width : 120px) 
-and (max-device-width : 480px)  {
+@media screen and (min-device-width : 0px) 
+and (max-device-width : 450px)  {
    
     
     *{   font-family:Bahnschrift Light;
          padding: 0px;
     }   
     
-.menu{ width: 110%;
-        height: 13%;
-        margin-left: -50;
+.menu{ width: 120%;
+        height: 260px;
+        margin-left: -115;
         margin-top: -10;
         flex-wrap: wrap;
+        padding: 30px;
          
     }
     
 .Menubox {
         width: 400px;
-        height: 20%;
+        height: 60px;
         border-radius: 20px;
         font-size: 2.5em;
         font-weight: 600;
+        
     }
     
 #Inhalt {
