--- a/styless.css
+++ b/styless.css
@@ -94,7 +94,7 @@
 h2{font-size: 1.2em    }
     
 
-}
+
 
     
   
@@ -115,7 +115,7 @@ a:hover {
         color:#e37a68;
         
         
-    }    
+    }  }  
     
 
     
