--- a/styless.css
+++ b/styless.css
@@ -1,152 +1,141 @@
 
-@media screen and (min-width: 380px){
-*{
-    font-family: sans-serif;
-}
-
-.Bild img{
-    width: 100%;
-   height: auto;
-   
-                  
-}
-.bild{
-   box-sizing:border-box; 
-    
-    }    
-
-#box {
-    margin-left: auto;
-    margin-right: auto;
-    
-    width: 960px;
-    max-width:80%;
-    height: auto;
-    
-    
-    background-color: rgba( 254, 240, 242, 0.3 );
-    
-  
+.oberbalken {
+    height: 100%;
+    background-color:#f7fcf7;
     
     }
-.Menu {
-    height: 90px;
-    background-color: rgba( 255, 122, 144, 0.289 );
-    float: left;
-    margin-left: 2%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+
+.seitenb {
+    height: 88px;
+    max-width: 960px;
+    background-color: #ffffff;
+    margin: 0 auto;}
+
+
+nav ul{
+border: solid 1px #757575;
+border-radius: 20px;
+padding: 0 0px;
+float: left;
+margin-right: 20px;
+margin-left: 20px;
+list-style: none;
+position: relative;
+display:inline-table;
+
+
+}
+nav ul li {
+	float: left;
     
 }
 
-.Menubox {
-    width: 130;
-    
-   
-    height: 25px;
-    padding: 7px;
-   
-    
-    background-color: 
-        rgba( 255, 255, 255, 0.543 );
-    border-radius: 4px;
-    margin-left: 5%;
-    margin-right: 5%
-    
-    
-    
-}
-    
-    .Menubox {
-        margin-left: 0px;
-        margin-top:   30px;
-        font-weight: 600;
-        text-align: center;
-    
-    }   
-    
-    .Menubox a{
-        text-decoration: none;
-        color: black;
-       
+	nav ul li a {
+		display: block; padding: 6px 40px;
         
-        
-    }
-        
+		color: #494949; text-decoration: none;
+	}
 
-    
-#Inhalt {
-    
-    box-sizing: border-box;
-    float: right;
-    clear: both;
-    width: 80%;
-    margin-right: 2%; 
+nav ul li:hover a{
+    background: rgba( 190, 255, 117, 0.242 );
+    border-radius: 20px;
+}
+
+#Logo {
     margin-top: 0px;
-    background-color: rgba( 254, 223, 210, 0.216 );
-    padding: 40px;
-    line-height: 1.8
-   
-     
+    margin-left: 2%;
+    max-width: 100%;
+    height: auto;
+    float: right;
+    margin-bottom: 10px;
 }
-    
-h2{font-size: 1.2em    }
-    
-inhalt p{
+
+#Bild{ float: left;
+        width: 300;
+
+}
+.Unterline{
     clear: both;
-    text-indent: 20;
-} 
-
-a:hover {
-        color:#e37a68;
-        
-        
-    }  }  
+    max-width: 100%;
+    height: 0.7;
+    border-style: none;
+    background-color: #494949;
     
-
     
-@media screen and (min-device-width : 0px) 
-and (max-device-width : 450px)  {
-   
     
-    *{   font-family:Bahnschrift Light;
-         padding: 0px;
-    }   
-    
-.menu{ width: 120%;
-        height: 260px;
-        margin-left: -115;
-        margin-top: -10;
-        flex-wrap: wrap;
-        padding: 30px;
-         
-    }
-    
-.Menubox {
-        width: 400px;
-        height: 60px;
-        border-radius: 20px;
-        font-size: 2.5em;
-        font-weight: 600;
-        
-    }
-    
-#Inhalt {
-        font-size: 1.5em;
-        width: 100%;
-        margin-right: -1%;
-        
-    }
-#Bild {
-        margin-left: -10px;
-        max-width: 100%;
-        max-height: 100%;
-        
-       height: 35%;
-        width: 90%;
-        }
 }
+#Inhaltb{
+    margin-left: 20px;
+}
+
+#Texte{height: 70%;
+    width: 800px;
+    background-color: #ffffff;
+    margin: 70 auto 0 auto
+    }
+#Texte h1{
+    padding: 20 70;
+    font-family: Segoe Script;
     
     
+}
+#Texte p{
+    
+    
+    word-spacing: 2px;
+    line-height: 1.5;
+    }
+
+#unterl{
+    margin-top: 20%;
+  
+   
+    width: 70%;
+    height: 0.4;
+    border-style: none;
+    background-color: #494949;
+}
+
+#umrandung {
+    margin: 60 70;
+    padding: 0px 30px;
+    border: 1.5px;
+    border-style:dotted;
+    border-color: #b2b2b2
+    
+    
+}
+
+#Unterbalken { width: 960px;
+margin: 130 auto 0 auto;
+height: 90px; 
+background-color: white;
+
+
+        
+}
+
+.Innenblock {
+width: 33.33333333333333333333333333333333333%;
+margin-top: ;
+float: left;
+background-color:#ffffff
+}
+.Innenblock b{
+    padding: 10 2;
+    
+    color: #2b5e2b
+}
+
+.Innenblock p {
+    
+    margin-top: 0;
+    padding: 0 0 0 60px;
+    font-size: 0.8em;
+    line-height: 1.25;
+}
+
+h2{
+    
+        
+}
